# avea

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci-validation.yml  python-publish.yml
avea/: __init__.py  avea.py
tests/: test_logging.py
