[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avea"
version = "1.6.1"
description = "Control an Elgato Avea bulb using python3"
readme = "README.md"
requires-python = ">=3.10,<4"
license = {text = "MIT"}
authors = [
    {name = "k0rventen"},
    {name = "pattyland"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "bleak>=1.0.0",
    "bleak-retry-connector>=4.0.0",
]

[project.urls]
Documentation = "https://github.com/k0rventen/avea/blob/main/README.md"
Homepage = "https://github.com/k0rventen/avea"
Source = "https://github.com/k0rventen/avea"
Tracker = "https://github.com/k0rventen/avea/issues"

[tool.setuptools.packages.find]
include = ["avea"]
