[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "wheel",
]

[project]
authors = [
    {name = "k0rventen"},
    {name = "pattyland"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "bleak>=1.0.0",
    "bleak-retry-connector>=4.0.0",
]
description = "Control an Elgato Avea bulb using python3"
license = {text = "MIT"}
name = "avea"
readme = "README.md"
requires-python = ">=3.10,<4"
version = "1.6.1"

[project.urls]
Documentation = "https://github.com/k0rventen/avea/blob/main/README.md"
Homepage = "https://github.com/k0rventen/avea"
Source = "https://github.com/k0rventen/avea"
Tracker = "https://github.com/k0rventen/avea/issues"

[tool.setuptools.packages.find]
include = ["avea"]
